# BellmanFilterDFSV

./: .augment-guidelines  .augmentignore  .clinerules  .coveragerc  .dockerignore  .gitignore  .rooignore  .roomodes  Dockerfile  Models.mw  Optimizer.py  README.md  aggregated_simulation_results.csv  aggregated_simulation_results.txt  base_debug_bellman.py  batch_job_bf.template.json  batch_job_bf_processed.json  batch_job_pf.template.json  batch_job_pf_processed.json  bellmantest.ipynb  compare_filters.py  debug_bellman.ipynb  expanded_simulation_plan.md  filters.py  likelihood.ipynb  likelihood_functions.py  optimizetest.ipynb  project_rename_plan.md  pyproject.toml  refactoring_plan.md  requirements.txt  sim_functions.py  sim_gen.ipynb  simple_dfsv_example.py  simulation_analysis.ipynb  simulation_results.csv  simulation_study.py  test_bellman_fix.py  test_jit_likelihood_gradient.py  test_likelihood_surface.py  (+1 more)
.roo/: system-prompt-architect  system-prompt-ask  system-prompt-code  system-prompt-debug  system-prompt-test
Archive/: Data_import.m  Itocalc.asv  Itocalc.mlx  ito.m  logeps.ipynb  sp500_crsp.ipynb  vix_check.ipynb
Data/: 5_Industry_Portfolios_Daily.csv  US_index_data.csv  Us_index_descriptions.xlsx
examples/: 01_dfsv_simulation.py  02_basic_filtering.py  03_parameter_optimization.py  04_parameter_transformation.py  05_optimizer_comparison.py  06_real_data_application.py  06_scheduler_comparison.py  06_scheduler_comparison_simple.py  07_one_cycle_tuning.py  08_one_cycle_lr_tuning.py  09_robust_one_cycle.py  10_advanced_stability_techniques.py  README.md  bf_optimization.py  jax_params_example.py  optimization.py  parameter_optimization_example.py  parameter_transformation_example.py  pf_transform_optimization.py  simple_dfsv_example.py  test_lax_while_optimization.py  transform_optimization.py
functions/: bellman_filter.py  bellman_filter.txt  filter_bellman.py  filter_blockopt.py  filters.py  jax_params.py  likelihood_functions.py  optimization.py  simulation.py  transformations.py
memory-bank/: activeContext.md  decisionLog.md  productContext.md  progress.md  systemPatterns.md  thesis_timeline.md
models/: dfsv.py
notebooks/: debug_bellman.ipynb  likelihood.ipynb
scripts/: aggregate_optimization_results.py  aggregate_simulation1_data.py  aggregate_simulation_results.py  analyze_mu_gradient.py  base_debug_bellman.py  benchmark_particle_filter.py  bif_optimizer_stability.py  calculate_array_means.py  check_full_phi_recovery.py  check_model_metrics.py  check_pickle.py  compare_all_optimizers.py  compare_all_optimizers_mp.py  compare_all_optimizers_pmap_debug.py  compare_bif_optimizers.py  compare_filters.py  compare_minimizer_speed.py  compare_study_results.py  datacleaning.py  debug_bellman_filter.py  debug_bif_gradient.py  debug_bif_true_params.py  default_simulation_config.json  finalize_aggregated_metrics.py  full_simulation_config.json  generate_optimization_configs.py  merge_simulation1_data.py  merge_simulation_results.py  process_simulation_results.py  profile_bellman_filter.py  profile_objective_stability.py  profile_particle_filter.py  run_config_batch.py  run_optimization_replicate.py  run_single_replicate.py  simple_dfsv_example.py  simulation_analysis.py  simulation_study.py  (+11 more)
(+153 files in other folders)
