[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bellman-filter-dfsv"
version = "0.1.0"
description = "Econometrics thesis project code for filtering DFSV models."
readme = "README.md" # Optional: if you create one later
requires-python = ">=3.12" # Adjust based on your Python version
dependencies = [
    "pandas",
    "numpy",
    "jax",
    "jaxlib",
    "jax-dataclasses",
    "matplotlib",
    "jaxopt",
    "sympy",
    "optax",
    "optimistix",
    "jaxtyping",
    "plotly",
    "tqdm",
    "altair",
    # "pytest", # Moved to dev dependencies
    "scipy",
    # Add any other direct dependencies here
    "gcsfs", # Added for Google Cloud Storage access
    "pyarrow>=19.0.1",
    "cloudpickle>=3.1.1",
    "scikit-learn>=1.6.1",
    "google-cloud-batch>=0.17.35",
    "ipykernel>=6.29.5",
    "polars>=1.27.1",
    "seaborn>=0.13.2",
    "marimo[lsp]>=0.13.0",
    "jupytext>=1.17.0",
    "tabulate>=0.9.0",
    "python-lsp-server>=1.12.2",
    "statsmodels>=0.14.4",
    "rich>=14.0.0",
    "notebook>=7.4.1",
]

[tool.setuptools.packages.find]
where = ["src"] # Look for packages in src/

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov", # Replaced coverage
    "flake8",
    "black",
    # Add other development tools
]
